fix h1 chopoff issue on smaller screen

--- a/static/styles.css
+++ b/static/styles.css
@@ -129,11 +129,12 @@ section h1 {
   text-align: center;
   font-family: Arial, Helvetica, sans-serif;
   font-weight: 700 !important;
-  height: 6vh;
+  padding: 1px;
+  font-size: 6vh !important;
 }
 
 section .carousel {
-  height: 94vh;
+  height: 93vh;
 }
 
 /* All carousels */
@@ -145,8 +146,6 @@ section .carousel {
   background: #555555;
   margin-bottom: 0;
   color: white;
-  font-weight: 700;
-  font-size: 3rem;
   text-align: center;
 }
 
@@ -161,6 +160,10 @@ section .carousel {
 
 #main-carousel h2 {
   font-weight: 700;
+}
+
+#main-carousel.carousel {
+  height: 100vh;
 }
 
 .carousel-caption a {
